--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
   <body>
     <div class="tudo">
-    <img src="img/ATENDIMENTO ONLINE1.jpg" alt="online" width="140" height="80">
+    <img src="ATENDIMENTO ONLINE1.jpg" alt="online" width="140" height="80">
 <h1>Adicione sua conta</h1>
 <div class="centro-login">
 <label for="nome">Nome do usuario</label>
